# openemr-base-clean

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  AUDIT.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  README.md  TICKETS.md  USERS.md  W2_ARCHITECTURE.md  railway.json
.claude/: settings.local.json
agent/: .env.example  .gitignore  Dockerfile  FINAL_ADVERSARIAL_REVIEW.md  Makefile  Procfile  RETRIEVAL.md  W2_PIPELINE_RESUME.md  W2_WRITE_PATH_ACTIVATION.md  mypy-ratchet.txt  pyproject.toml  railway.json  railway.worker.json
agent/app/: config.py  health.py  logging.py  main.py  service.py
agent/app/auth/: job_credentials.py  scopes.py  smart_client.py
agent/app/evidence/: packet.py
agent/app/grounding/: __init__.py  verifier.py
agent/app/ingestion/: __init__.py  admission.py  artifacts.py  image_reader.py  lab_trends.py  migrations.py  pages.py  pipeline.py  processor.py  readback.py  reader.py  reports.py  repository.py  runtime.py  service.py  telemetry.py  uploads.py  worker.py
agent/app/llm/: __init__.py  cost.py  provider.py  vlm.py
agent/app/middleware/: correlation.py  request_limits.py  sensitive_responses.py
agent/app/observability/: __init__.py  events.py  langfuse.py  retrieval.py  summary.py  trace.py
agent/app/orchestrator/: __init__.py  composer.py  critic.py  graph.py  loop.py  refs.py  state.py  subspans.py
agent/app/orchestrator/workers/: __init__.py  contracts.py  evidence_retriever.py  extraction_adapter.py  intake_extractor.py  stub_extractor.py  stub_retriever.py
agent/app/routes/: chat.py  documents.py  evidence.py  health.py  openapi_contract.py  sessions.py  ui.py  week2_ui.py
agent/app/schemas/: __init__.py  answers.py  citations.py  documents.py  extraction.py  extraction_report.py  handoff.py  jobs.py  lab_trends.py  retrieval.py  workers.py  writeback.py
agent/app/session/: store.py
agent/app/tools/: contracts.py  fhir_client.py  fhir_tools.py
agent/app/verify/: __init__.py  claims.py  rules.py  templater.py  verifier.py
agent/app/writeback/: __init__.py  documents_api.py  gateway.py  intents.py  live_gateway.py  preflight.py  ranges.py  rest_client.py  route_attestations.py  source_loader.py  transports.py  vitals_api.py
agent/bruno/: .gitignore  README.md  bruno.json  chat.bru  dev_mint.py  evidence-search.bru  health.bru  intake-duplicate.bru  intake-upload.bru  lab-extraction-report.bru  lab-page-preview.bru  lab-readback.bru  lab-status.bru  lab-upload.bru  mint-token.md  ready.bru
agent/bruno/environments/: Deployed.bru
agent/bruno/tests/: test_dev_mint.py
agent/corpus/: README.md  __init__.py  build.py  check_index_manifest.py  chunks.jsonl  extract_sources.py  manifest.json  requirements.txt  retrieval.py
agent/corpus/index/: dense.f32  metadata.json
agent/corpus/sources/: vadod-diabetes-2023-quick-reference.jsonl  vadod-diabetes-2023.jsonl  vadod-hypertension-2020-pocket-card.jsonl  vadod-hypertension-2020.jsonl  vadod-lipids-2025-pocket-card.jsonl  vadod-lipids-2025.jsonl
agent/corpus/tests/: __init__.py  test_build.py  test_cohere_retry.py  test_evidence_route.py  test_integrity.py  test_retrieval.py
agent/demo/fixtures/: README.md  generate_demo_pdfs.py
agent/evals/: README.md  __init__.py  artifact_scan.py  canary.py  cases.py  citation-regression-candidates.txt  execution.py  golden_loader.py  harness.py  judge_config.yaml  langfuse_publish.py  live_executor.py  record_retrieval.py  recorded_executor.py  refresh_recordings.py  results-tier1.json  results-tier2.json  retrieval_adapters.py  runner.py  schema.py  scorers.py  test_artifact_scan_aggregate.py  test_canary_short_phi.py  test_evals.py  test_langfuse_publish.py  test_retrieval_gate.py  test_w2_eval_harness.py  test_w2_probe.py  test_w2_runner.py  w2_baseline.json  w2_models.py  w2_recorded_baseline.json  w2_runner.py
agent/evals/fixtures/: __init__.py  deceased_patient.py  fhir_failure.py  llm_failure.py  no_allergy.py
agent/evals/fixtures/documents/: generate_fixtures.py
agent/evals/fixtures/golden/: gen_adversarial_fixtures.py  gen_medication_fixtures.py  gen_retrieval_fixtures.py
agent/evals/golden/: cases.json
agent/evals/recordings/: index.json  retrieval.json
agent/load/k6/: README.md  chat_capped.js  public_baseline.js  w2_profiles.js
agent/load/k6/tests/: guardrails.sh
agent/migrations/: 001_sessions.sql  003_document_jobs.sql  004_extraction_refs.sql  005_job_credentials.sql  006_route_attestations.sql  007_medication_list.sql  README.md
agent/openapi/: evidence.yaml
agent/ops/: README.md  __init__.py  alert_checker.py  openapi.yaml  spike_reader.py  spike_rss.py  spike_tier2.py  w2_alert_checker.py  w2_alerts.json  w2_dashboard.json
agent/ops/tests/: test_alert_checker.py  test_w2_alert_checker.py  test_w2_definitions.py
agent/scripts/: __init__.py  activate_w2_write_path.py  dependency_audit.py  restore_drill.py  static_security_gate.py  verify_deployed_sha.py  verify_w2_write_path.py
agent/tests/: conftest.py  test_activate_w2_write_path_script.py  test_answer_closeout.py  test_app_boot.py  test_artifact_authority_divergence.py  test_artifact_scan_formats.py  test_b2_runtime_pipeline.py  test_b3_completion.py  test_chat_live.py  test_chat_route.py  test_claims.py  test_composite_refs.py  test_config.py  test_config_documentation.py  test_correlation.py  test_cost_cap.py  test_critic_events_closeout.py  test_demo_pdf_fixtures.py  test_dependency_audit_policy.py  test_document_category_readiness.py  test_document_readback_verification.py  test_document_route_runtime_e2e.py  test_document_upload_admission.py  test_document_worker_service.py  test_documents_b2.py  test_evidence_packet.py  test_extraction_report.py  test_extraction_worker_b2.py  test_fhir_tools.py  test_github_gate_bridge.py  test_graph_skeleton.py  test_grounding_numeric_collision.py  test_grounding_table_intake.py  test_grounding_verifier.py  test_health.py  test_image_intake_robustness.py  test_ingestion_observability.py  test_job_credentials.py  test_lab_pdf_full_path.py  test_lab_trends.py  (+55 more)
(+132 files in other folders)
