[project]
name = "clinical-copilot-agent"
version = "0.1.0"
description = "Clinical Co-Pilot — SMART-on-FHIR sidecar agent for OpenEMR (ARCHITECTURE.md §2)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    # LLM provider (Zone C, D4). Reached only through app/llm/provider.py's
    # llm.complete() seam, so the model is swappable by config, not code.
    "anthropic>=0.40",
    # Observability (§7, D5-rev). Lazy-imported behind app/observability's sink seam;
    # a soft dependency — its absence/failure degrades the trace, never serving.
    "langfuse>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    # Selenium is a TEST-HARNESS-ONLY dependency (drives the interactive SMART
    # login/consent to prove the token returns real FHIR data). The runtime agent
    # never imports it.
    "selenium>=4.20",
]
# Opt-in browser deps for the pure-frontend /app UI smoke test (tests/test_ui_smoke.py).
# NOT in the default install, so `pip install -e .` + `pytest` stays browser-free and the
# smoke test self-skips (pytest.importorskip). To run it: `pip install -e ".[ui]"` then
# `playwright install chromium` then `pytest -m ui`.
ui = [
    "playwright>=1.40",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error::DeprecationWarning"]
markers = [
    "live: hits the live deployed OpenEMR / drives Selenium (opt-in via RUN_LIVE=1)",
    "ui: pure-frontend /app smoke test; drives Playwright against a mocked /chat (opt-in — see [ui] extra)",
]

[tool.setuptools.packages.find]
include = ["app*"]
