[project]
name = "clinical-copilot-agent"
version = "0.1.0"
description = "Clinical Co-Pilot — SMART-on-FHIR sidecar agent for OpenEMR (ARCHITECTURE.md §2)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    # LLM provider (Zone C, D4). Reached only through app/llm/provider.py's
    # llm.complete() seam, so the model is swappable by config, not code.
    "anthropic>=0.40",
    # Observability (§7, D5-rev). Lazy-imported behind app/observability's sink seam;
    # a soft dependency — its absence/failure degrades the trace, never serving.
    "langfuse>=4.13,<5",
    # Postgres session store (D-O2 / §3a). Async driver for the durable, multi-replica
    # (clinician, patient) pin; lazy-imported in the composition root so it is never a hard
    # import dependency for the route tests (which inject a fake service).
    "asyncpg>=0.29",
    # W2 orchestration framework (W2-R1, W2-D2 — binding). Supervisor + worker graph
    # lives in app/orchestrator/graph.py (W2-M3); the W1 direct loop runs unchanged
    # inside a worker node. Pre-staged on swarm/w2-wave0 so W2-M1 (container) and
    # W2-M3 (graph) keep exclusive file scopes within the wave.
    "langgraph>=1.2,<2",
    # --- W2-M1 native/RAG dependency set (W2-R6 reader stack, W2-D3 OCR grounds,
    # W2-D4 ONNX embedding+rerank path). NO torch anywhere in this tree (AC-2 guard
    # test); PyMuPDF is banned (AGPL, W2-R6 locked-decision).
    # pdfium renderer (BSD-3-Clause/Apache-2.0 bindings over Apache-2.0 pdfium).
    "pypdfium2>=5.11,<6",
    # words+boxes extraction, staged here for W2-M4 (MIT). Transitive deps:
    # pdfminer.six (MIT), pillow (MIT-CMU/HPND family — ALLOWLIST: permissive,
    # non-copyleft historical-permission license; required imaging dep of the
    # pdfplumber/pytesseract stack, mirrors W2-M4 AC-5 allowlist entry).
    "pdfplumber>=0.11,<0.12",
    # Tesseract binding (Apache-2.0); the tesseract BINARY + eng traineddata are
    # installed at the image layer (Dockerfile: tesseract-ocr, tesseract-ocr-eng).
    "pytesseract>=0.3.13",
    # ONNX embeddings + local cross-encoder reranker (Apache-2.0); brings
    # onnxruntime (MIT) — the torch-free execution path (W2-D4). Transitive
    # tqdm is the combined expression "MPL-2.0 AND MIT", not a dual-choice
    # permissive license. The Linux numpy wheel also bundles libgfortran under
    # GPL-3.0-or-later WITH GCC-exception-3.1. Both are required transitively by
    # fastembed; the binding permissive/no-GPL-identifier DoD needs an owner
    # exception (recorded in the W2-M1 implementation report).
    "fastembed>=0.8,<0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    # Selenium is a TEST-HARNESS-ONLY dependency (drives the interactive SMART
    # login/consent to prove the token returns real FHIR data). The runtime agent
    # never imports it.
    "selenium>=4.20",
]
# Opt-in browser deps for the pure-frontend /app UI smoke test (tests/test_ui_smoke.py).
# NOT in the default install, so `pip install -e .` + `pytest` stays browser-free and the
# smoke test self-skips (pytest.importorskip). To run it: `pip install -e ".[ui]"` then
# `playwright install chromium` then `pytest -m ui`.
ui = [
    "playwright>=1.40",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error::DeprecationWarning"]
markers = [
    "live: hits the live deployed OpenEMR / drives Selenium (opt-in via RUN_LIVE=1)",
    "ui: pure-frontend /app smoke test; drives Playwright against a mocked /chat (opt-in — see [ui] extra)",
]

[tool.setuptools.packages.find]
include = ["app*"]
